解决了包名的一些问题，删除了puzzleGame，因为实在太难搞了哈哈哈